--- a/HomeWork/forms.html
+++ b/HomeWork/forms.html
@@ -156,7 +156,15 @@
                         <a href="forms.html"><i class="fa fa-fw fa-edit"></i>发布任务</a>
                     </li>
                     <li>
-                        <a href="bootstrap-elements.html"><i class="fa fa-fw fa-desktop"></i>任务管理</a>
+                        <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i>任务管理<i class="fa fa-fw fa-caret-down"></i></a>
+                        <ul id="demo" class="collapse">
+                            <li>
+                                <a href="create.html">已发布任务</a>
+                            </li>
+                            <li>
+                                <a href="receive.html">已领取任务</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
